--- a/application_server/package.json
+++ b/application_server/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.13.3"
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "multer": "^1.0.3",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
