--- a/application_server/package.json
+++ b/application_server/package.json
@@ -8,6 +8,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "http": "0.0.0",
     "multer": "^1.0.3",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0"
