--- a/application_server/package.json
+++ b/application_server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "http": "0.0.0",
