--- a/chatbox_server/package.json
+++ b/chatbox_server/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "http": "0.0.0",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "sockjs": "^0.3.15"
   },
   "devDependencies": {},
   "scripts": {
