--- a/content_server/package.json
+++ b/content_server/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "express": "^4.13.3",
     "http": "0.0.0",
-    "sockjs": "^0.3.15",
-    "sockjs-client": "^1.0.3",
-    "stomp": "^0.1.1",
-    "stomp-client": "^0.8.0"
+    "http-post": "^0.1.1",
+    "mysql": "^2.9.0",
+    "requestify": "^0.1.17",
+    "sockjs": "^0.3.15"
   },
   "devDependencies": {},
   "scripts": {
